experiment with github actions workaround for deprecation of set-output in github actions

--- a/.github/workflows/build-N-test-v2.1-Dev.yml
+++ b/.github/workflows/build-N-test-v2.1-Dev.yml
@@ -391,7 +391,8 @@ jobs:
       # https://stackoverflow.com/questions/58033366/how-to-get-current-branch-within-github-actions
       - name: Extract branch name
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        # run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        run: echo "branch=`echo ${GITHUB_REF#refs/heads/}`" >> $GITHUB_OUTPUT
         id: extract_branch
       - name: Build System Info
         shell: "bash"
