changed Xerces version autodetect to use new VersionCompare scripts to better check installed cmake version

--- a/ThirdPartyComponents/Xerces/Makefile
+++ b/ThirdPartyComponents/Xerces/Makefile
@@ -34,7 +34,7 @@ VERSION=3.2.4
 ifeq (Unix,$(ProjectPlatformSubdir))
 ifeq ($(VERSION), 3.2.4)
 # This version of xerces requires more recent copy of cmake
-ifeq ($(shell $(StroikaRoot)ScriptsLib/VersionCompare `cmake --version | awk '{print $$3}' | awk 'FNR == 1'` 3.12), 1)
+ifeq ($(shell $(StroikaRoot)ScriptsLib/VersionCompare `cmake --version | awk '{print $$3}' | awk 'FNR == 1'` 3.12; echo $$?), 2)
 VERSION=3.2.3
 endif
 endif
