lots more cleanups on docker container builds (shorten/simplify; emiminate some uneeded steps; more careful about what compilers to install - try to get so works for both v2.1 and v3 builds

--- a/DockerBuildContainers/Ubuntu2204-RegressionTests/Dockerfile
+++ b/DockerBuildContainers/Ubuntu2204-RegressionTests/Dockerfile
@@ -3,6 +3,9 @@ FROM sophistsolutionsinc/stroika-buildvm-ubuntu2204-small
 # Get latest packages system, so can do installs
 RUN apt-get update
 
+#locale support not strictly required, but some regression tests depend on it
+RUN apt-get install -y locales && locale-gen en_US en_US.UTF-8
+
 # Just to echo information in regression test output
 RUN apt-get install -y lsb-release
 
@@ -12,7 +15,7 @@ RUN apt-get install -y g++-9 g++-10 g++-11 g++-12
 # For reasons which elude me, installing libc++-N removes all the other
 # https://askubuntu.com/questions/1227092/how-can-i-install-multiple-versions-of-llvm-libc-on-the-same-computer-at-the-s
 #
-#install the latest (C++17 compat) clang compilers (and libs)
+#install the latest (C++20 compat) clang compilers (and libs)
 #and only install libc++-14-dev since others don't appear to work on this release of ubuntu (at least not instlaling mulitple versions)
 RUN apt-get install -y clang++-10
 RUN apt-get install -y clang++-11
