a few more dockerfile clanups (--qq install maybe not helping or at least not much)

--- a/DockerBuildContainers/Ubuntu2004-RegressionTests/Dockerfile
+++ b/DockerBuildContainers/Ubuntu2004-RegressionTests/Dockerfile
@@ -4,25 +4,25 @@ FROM sophistsolutionsinc/stroika-buildvm-ubuntu2004-small
 RUN apt-get update
 
 # Just to echo information in regression test output
-RUN apt-get install -y lsb-release
+RUN apt-get install -qq -y lsb-release
 
 #install the latest (C++20 compat) g++ compilers
-RUN apt-get install -y g++-11 g++-12
+RUN apt-get install -qq -y g++-11 g++-12
 
 #install the latest (C++20 compat) clang compilers (and libs)
 # must include clang++-VERSION on different lines due to issue with some python dependency
 # UNCLEAR why some interdependency - cannot install different versions of libc++-10-dev at the same time??
 # See https://stackoverflow.com/questions/61165575/how-can-i-install-multiple-versions-of-llvm-libc-on-the-same-computer-at-the-s
-RUN apt-get install -y clang++-10
-RUN apt-get install -y libc++-10-dev libc++abi-10-dev
+RUN apt-get install -qq -y clang++-10
+RUN apt-get install -qq -y libc++-10-dev libc++abi-10-dev
 
 # for testing configuration 'only-zlib-system-third-party-component'
-RUN  apt-get install -y zlib1g-dev
+RUN apt-get install -qq -y zlib1g-dev
 
 #Only needed to run with valgrind regtests
-RUN apt-get install -y valgrind
+RUN apt-get install -qq -y valgrind
 
 # Cross-compile tests for ARM (iputils-ping is how we detect if machine exists to run regtests on)
 # (note 9/10 for use in building Stroika v2.1, not v3)
 # (g++-11-arm-linux-gnueabihf doesnt appear to exist in Ubuntu 20.04, at least not with repositories I've tried so far --LGP 2022-11-08)
-RUN apt-get install -y g++-9-arm-linux-gnueabihf g++-10-arm-linux-gnueabihf iputils-ping
+RUN apt-get install -qq -y g++-9-arm-linux-gnueabihf g++-10-arm-linux-gnueabihf iputils-ping
